@@ -1,12 +1,12 @@
 package com.paperstories.ms_books_payments.service;
 
-import java.math.BigDecimal;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
+import com.paperstories.ms_books_payments.controller.model.PaymentDto;
 import com.paperstories.ms_books_payments.controller.model.PaymentRequest;
 import com.paperstories.ms_books_payments.data.PaymentJpaRepository;
 import com.paperstories.ms_books_payments.data.model.Payment;
@@ -24,44 +24,45 @@ public class PaymentsServiceImpl implements PaymentsService {
 
   @Override
   public Payment createPayment(PaymentRequest request) {
-    List<Book> books = request.getBooks().stream().map(booksFacade::getBook).filter(Objects::nonNull).toList();
+    List<PaymentDto> paymentDtos = request.getPayments();
+    List<String> bookIds = paymentDtos.stream().map(PaymentDto::getBookId).collect(Collectors.toList());
+    List<Book> books = bookIds.stream().map(booksFacade::getBook).filter(Objects::nonNull).toList();
 
-    if(books.size() != request.getBooks().size() || books.stream().anyMatch(book -> !book.getVisible())) {
+    if (books.size() != bookIds.size() || books.stream().anyMatch(book -> !book.getVisible())) {
       return null;
     } else {
       // Crear detalles del pago
-      List<PaymentDetail> details = books.stream()
-      .map(book -> {
-      // Validar que book no tenga valores nulos o incorrectos
-      Long bookId = book.getId();
-      Integer quantity = book.getCantidad();
-      Float price = book.getPrecio();
+      List<PaymentDetail> details = paymentDtos.stream().map(paymentDto -> {
+        Book book = books.stream().filter(b -> b.getId().toString().equals(paymentDto.getBookId())).findFirst().orElse(null);
+        if (book == null) {
+          throw new IllegalArgumentException("Libro no encontrado: " + paymentDto.getBookId());
+        }
 
-      if (bookId == null || quantity == null || price == null || quantity <= 0 || price <= 0) {
+        Long bookId = book.getId();
+        Float price = book.getPrecio();
+        Integer quantity = paymentDto.getQuantity();
+
+        if (bookId == null || quantity == null || price == null || price <= 0) {
           throw new IllegalArgumentException("Datos inválidos en el libro: " + book);
-      }
+        }
 
-      return PaymentDetail.builder()
-              .bookId(bookId)
-              .quantity(quantity)
-              .price(price)
+        return PaymentDetail.builder()
+                .bookId(bookId)
+                .quantity(quantity)
+                .price(price)
+                .build();
+      }).collect(Collectors.toList());
+
+      Float totalAmount = details.stream()
+              .map(detail -> detail.getPrice() * detail.getQuantity())
+              .reduce(0f, Float::sum);
+
+      Payment payment = Payment.builder()
+              .totalAmount(totalAmount)
+              .details(details)
               .build();
-  })
-  .collect(Collectors.toList()); // Asegura que la lista sea mutable
 
-  // Calcular el totalAmount sumando precio * cantidad
-  BigDecimal totalAmount = details.stream()
-          .map(detail -> detail.getPrice().multiply(Float.valueOf(detail.getQuantity())))
-          .reduce(Float.ZERO, Float::add);
-
-  // Construir el Payment
-  Payment payment = Payment.builder()
-          .totalAmount(totalAmount)
-          .details(details)
-          .build();
-
-  // Establecer la relación en los detalles
-  details.forEach(detail -> detail.setPayment(payment));
+      details.forEach(detail -> detail.setPayment(payment));
       repository.save(payment);
       return payment;
     }
